force-app/main/default/objects/Community_Experience_Site_Banner__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Site banner used for announcements in My Application</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Feature switch</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Message__c</fullName>
        <description>This is an additional message if announcement takes more than 255 characters</description>
        <label>Additional Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End date of the announcement</description>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Message shown in the banner</description>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date of the announcement</description>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>URL_Link__c</fullName>
        <description>HDR Url Link</description>
        <label>URL Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URL_Text__c</fullName>
        <description>HDR Url Text</description>
        <label>URL Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Community Experience Site Banner</label>
</CustomObject>